Fixed visibility of no rooms occupied message

--- a/public/css/visibility.css
+++ b/public/css/visibility.css
@@ -7,5 +7,5 @@
 }
 
 .collapsed {
-    visibility: collapse;
+    display: none;
 }
